# ASE-C.O.R.T.I.N.A

./: .gitignore  CMakeLists.txt  SoftwareASE.drawio  sdkconfig
Entrega/: contributions.txt
Entrega/SRC/: main.c
main/: CMakeLists.txt  main.c
